<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Utter</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_logout_label">Logout</string>
    <string name="title_activity_login">login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="empty_inbox_label">No New Messages</string>
    <string name="empty_friends_label">Add Friends to Begin</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing device storage.</string>
    <string name="general_error">Sorry, there was an error</string>
    <string name="video_file_size_warning">The selected video must be less than 10MB</string>
    <string name="action_send">Send</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose picture </item>
        <item>Choose video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="title_activity_view_image">Utter</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="facebook_app_id">844554582261759</string>
    <string name="forgotPasswordText"><![CDATA[Forgot Password >]]></string>
    <string name="welcomeBackText">Welcome Back</string>
    <string name="or">or</string>
    <string name="fbLoginButtonText">f  login</string>
    <string name="noAccountSignupText"><![CDATA[Don\'t have an account. Signup >]]></string>
    <string name="firstNameText">First Name</string>
    <string name="lastNameText">Last Name</string>
    <string name="alreadyHaveAccountText"><![CDATA[Already have an account. Login >]]></string>
    <string name="selectProfilePicText">select profile image</string>
    <string name="utterMainLogoText">utter main logo</string>
    <string name="getStartedText">get started</string>
    <string name="title_activity_get_started">Get Started</string>
    <string name="signUpWithEmailText">signup with email</string>
    <string name="signUpWithFacebook">signup with facebook</string>

</resources>
