<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.droidsize.utter.SignUpActivity">

    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/userImageSelection"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_action_person"
            android:background="@drawable/square_border_bg"
            android:contentDescription="@string/selectProfilePicText" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:hint="@string/firstNameText"
            />

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:hint="@string/lastNameText"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_layout"
        android:layout_marginTop="24dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/emailField"
            android:textSize="16sp"
            android:hint="@string/email_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:layout_marginTop="24dp"
        android:hint="@string/username_hint"
        android:textSize="16sp"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="24dp"
        android:hint="@string/password_hint"
        android:textSize="16sp"
        android:id="@+id/passwordField" />

    </LinearLayout>

    <TextView
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/theme_color"
        android:text="@string/alreadyHaveAccountText"/>

</RelativeLayout>
