<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.droidsize.utter.SplashScreenActivity"
    tools:ignore="MissingPrefix"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/main_logo"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/utterMainLogoText" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:text="@string/getStartedText"
                android:id="@+id/getStarted"
                android:textColor="@android:color/white"
                android:textSize="21sp"
                android:textStyle="bold"
                android:background="@drawable/get_started_button"
                android:layout_weight="1"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:text="@string/title_activity_login"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="21sp"
                android:id="@+id/loginButton"
                android:background="@drawable/app_theme_button"
                android:layout_weight="1"/>

        </LinearLayout>
        </RelativeLayout>


</LinearLayout>
