<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.droidsize.utter.GetStartedActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/light_grey">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/or"
            android:id="@+id/orTextView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/dark_grey" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/app_theme_button"
            android:text="@string/signUpWithEmailText"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/signupFbButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/fb_theme_button"
            android:text="@string/signUpWithFacebook"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>


        </RelativeLayout>


</LinearLayout>
